tests/errors/variant_flow/flow_unreachable_arm_after_reassign.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f(o1: Option) {
              o: Option;
              entry:
                o = Option::None(unit);
                o = move o1;
                switchEnum(o) [None: n, Some: dead]
              n: return
              dead: unreachable
            }
            