tests/errors/variant_flow/flow_unreachable_arm_after_reassign.err.expected
error: at 8:17: [VF-SwitchArmFalselyUnreachable] In function 'f', block 'entry': switchEnum arm for variant 'Some' claims unreachable but variant is reachable at this point
   |
 8 |                 switchEnum(o) [None: n, Some: dead]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
